<resources>
    <string name="app_name">PlaylistMaker</string>
    <string name="app_name2">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_with_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <string name="share_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="sendToSupport_email">drensy@rambler.ru</string>
    <string name="sendToSupport_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="sendToSupport_text">Спасибо разработчикам и разработчицам за крутое приложение</string>
    <string name="userAgreement_url">https://yandex.ru/legal/practicum_offer/</string>

    <string name="nothing_search_found_text">Ничего не нашлось</string>
    <string name="connection_error_text1">Проблемы со связью</string>
    <string name="connection_error_text2">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="reConnect">Обновить</string>

    <string name="your_search">Вы искали</string>
    <string name="clean_search_list">Очистить историю</string>

    <string name="song_duration">Длительность</string>
    <string name="song_album">Альбом</string>
    <string name="song_year">Год</string>
    <string name="song_style">Жанр</string>
    <string name="song_country">Страна</string>


</resources>