<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:orientation="vertical"
    android:padding="@dimen/screen_margins">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name2"
        android:textColor="@color/white"
        android:textSize="@dimen/text"
        android:paddingBottom="@dimen/for_blocks" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <Button
            app:cornerRadius="20dp"
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_main_height"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textSize="@dimen/text"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            android:foreground="?attr/selectableItemBackground"/>

        <Button
            android:id="@+id/media_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_main_height"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/media"
            android:textSize="@dimen/text"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:icon="@drawable/media"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            android:foreground="?attr/selectableItemBackground"/>

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_main_height"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textSize="@dimen/text"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            android:foreground="?attr/selectableItemBackground"

            android:layout_marginBottom="@dimen/screen_margins" />

    </LinearLayout>


</LinearLayout>